# netlist_viewer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
examples/: rlc.spice
src/netlist_viewer/: __init__.py  core_types.py  layout.py  routing.py  spice_parser.py
src/netlist_viewer/gui/: instance_graphics.py  main.py  netlist_view.py  symbol_item.py  symbols.py
tests/: test_spice_parser.py
