[project]
name = "netlist_viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.6.1",
    "pyside6>=6.10.2",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
