[project]
name = "netlist_viewer"
version = "0.1.0"
description = "Visualize SPICE netlists as interactive circuit diagrams"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.9",
    "networkx>=3.6.1",
    "pyside6>=6.10.2",
    "scipy>=1.17.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
netlist_viewer = "netlist_viewer.gui.main:cli_main"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
